[package]
name = "waku"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Waku (枠) — UI primitives for Neovim: floating windows, borders, input prompts, scrollable lists, layout"
homepage = "https://github.com/pleme-io/waku"
repository = "https://github.com/pleme-io/waku"
readme = "README.md"
license = "MIT"
categories = ["development-tools"]
keywords = ["neovim", "ui", "popup", "floating-window"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
nvim-oxi = { version = "0.5", features = ["neovim-0-11"] }
tane = { path = "../tane", version = "0.1.0" }
